--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
+<html>
 
-+<html>
-+
-+<body>
-+n'aptın
-+</body>
-+
-+</html>
-- +<html>
-  +<head>
-  <title>Policies</title>
-  +</head>
+  <body>
+    n'aptın
+  </body>
+</html>
